<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:background="@drawable/backgroungradasi"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@color/blue"
        app:layout_constraintTop_toTopOf="parent">
    </FrameLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/headerTitle"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/frameLayout"
        app:layout_constraintEnd_toEndOf="@+id/frameLayout"
        app:layout_constraintStart_toStartOf="@+id/frameLayout"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageMoney"
        android:layout_width="200dp"
        android:layout_height="225dp"
        android:src="@drawable/imagemoney"
        android:contentDescription="@string/imgDesc"
        app:layout_constraintBottom_toTopOf="@+id/costService"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/costService"
        android:background="@drawable/round_square_input"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="75dp"
        android:layout_height="35dp"
        android:layout_marginTop="5dp"
        android:textAlignment="center"
        android:autofillHints="numberDecimal"
        android:ems="10"
        android:inputType="numberDecimal"
        android:labelFor="@id/costService"
        android:text="@string/cos"
        android:textColor="@color/grey"
        app:layout_constraintBottom_toTopOf="@+id/howService"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageMoney"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/howService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="24dp"
        android:text="@string/question"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/radioService"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/costService" />

    <RadioGroup
        android:id="@+id/radioService"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/howService">

        <RadioButton
            android:id="@+id/amazing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/amazing"
            android:textSize="15sp"/>

        <RadioButton
            android:id="@+id/good"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/good"
            android:textSize="15sp"/>

        <RadioButton
            android:id="@+id/ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:textSize="15sp" />
    </RadioGroup>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        app:layout_constraintBottom_toTopOf="@id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toLeftOf="@id/switchTip"
        app:layout_constraintTop_toBottomOf="@id/radioService"
        app:layout_constraintVertical_bias="0.4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:text="@string/roundTip"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/button"
        app:layout_constraintRight_toLeftOf="@id/switchTip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioService"
        app:layout_constraintVertical_bias="0.4" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="96dp"
        android:layout_marginHorizontal="75dp"
        android:backgroundTint="@color/blue"
        android:text="@string/calc"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="80dp"
        android:text="@string/amount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

</androidx.constraintlayout.widget.ConstraintLayout>